objects/May16__c.object
<CustomObject>
    <fields>
        <fullName>Boeing_picklist__c</fullName>
        <label>Boeing picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
                <value>
                    <fullName>d</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nvidia_text__c</fullName>
        <label>Nvidia text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text1__c</fullName>
        <label>Text1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>May16</label>
    <nameField>
        <label>May16 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>May16s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>